--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsonsave",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.2",
+  "description": "Simple open, edit and save .json files",
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
