--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple open, edit and save .json files",
   "main": "jsonsave.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha -r should -R spec"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/LestaD/jsonsave#readme",
   "devDependencies": {
-    "conlog": "0.0.9"
+    "conlog": "0.0.9",
+    "mocha": "^2.2.5",
+    "should": "^6.0.3",
+    "supertest": "^1.0.1"
   }
 }
