--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "jsonsave",
   "version": "2.0.0",
   "description": "Simple open, edit and save .json files",
-  "main": "jsonsave.js",
+  "main": "bin/jsonsave.js",
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha -r should -R spec"
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha -r should -R spec",
+    "clean-cov": "rm -rf coverage/ coverage.html",
+    "prepare-cov": "./node_modules/.bin/jscoverage --encoding=utf8 --no-highlight bin coverage",
+    "coverage": "npm run prepare-cov && COVERAGE=1 ./node_modules/.bin/mocha -r should -R html-cov > coverage.html"
   },
   "repository": {
     "type": "git",
